--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,19 +4,19 @@
         aria-expanded="false" aria-label="Toggle navigation"></button>
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Project</a>  
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
                     <app-project-upload></app-project-upload>
                     <app-project-download></app-project-download>
                     <app-game-format></app-game-format>
                 </div>
-            </li>
-            <li class="nav-item nav-form">
+            </li> -->
+            <!-- <li class="nav-item nav-form">
                 <form class="form-inline my-2 my-lg-0 navbar-left">
                     <input class="form-control mr-sm-2" type="text" placeholder="Project Name" (change)="OnChangeName($event.target.value)" #fileName>
                 </form>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a routerLink="/data-settings" class="nav-link">Data Settings</a>
             </li>
