--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,7 +61,7 @@ a {
 }
 
 .local-var {
-    background-color: $blue-3;
+    background-color: $blue-2;
 }
 
 
@@ -100,4 +100,8 @@ body {
 
 .select2-container {
     margin-right: 5px;
+}
+
+.data-option {
+    background-color: $blue-4;
 }
