--- a/src/app/components/data-options/data-options.component.html
+++ b/src/app/components/data-options/data-options.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header" role="tab" id="section1HeaderId">
+  <div class="card-header data-option" role="tab" id="section1HeaderId">
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#dataoptions{{id}}" aria-expanded="true" [attr.aria-controls]="'dataoptions' + id">
         {{dataSetting.name}}
