--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,10 @@
                 </form>
             </li> -->
             <li class="nav-item">
-                <a routerLink="/data-settings" class="nav-link">Data Settings</a>
+                <a routerLink="/data-settings" class="nav-link">Event Settings</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/data-types" class="nav-link">Data Types</a>
             </li>
         </ul>
     </div>
