--- a/src/app/components/data-collection/data-collection.component.html
+++ b/src/app/components/data-collection/data-collection.component.html
@@ -2,7 +2,7 @@
   <div class="card-header data" role="tab" id="section1HeaderId">
     <h5 class="mb-0">
       <a data-toggle="collapse" data-parent="#accordianId" href="#nodeData" aria-expanded="true" aria-controls="nodeData">
-        Data
+        Events
       </a>
       <button class="btn btn-square float-right" (click)="addData($event)">
         <i class="fa fa-plus"></i>
@@ -10,7 +10,7 @@
     </h5>
   </div>
   <div id="nodeData" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId" #collapse>
-    <div class="card-body">
+    <div class="container">
       <div class="row form-inline mb-2" *ngFor="let data of nodeData">
         <div *ngIf="dataSettings.settings.length === 0">
           <div class="form-group col-sm-12">
@@ -20,9 +20,9 @@
               <option value="string">string</option>
               <option value="number">number</option>
             </select>
-            <input type="text" *ngIf="TypeOf(data) === 'string'" [(ngModel)]="data.value" class="form-control">
-            <input type="number" *ngIf="TypeOf(data) === 'number'" [(ngModel)]="data.value" class="form-control">
-            <select [value]="data.value.toString()" *ngIf="TypeOf(data) === 'boolean'" (change)="changeBool($event.target.value, data)"
+            <input type="text" *ngIf="TypeOf(data) === 'string'" [(ngModel)]="data.values['value']" class="form-control">
+            <input type="number" *ngIf="TypeOf(data) === 'number'" [(ngModel)]="data.values['value']" class="form-control">
+            <select [value]="data.values['value'].toString()" *ngIf="TypeOf(data) === 'boolean'" (change)="changeBool($event.target.value, data)"
               class="form-control">
               <option value="true">True</option>
               <option value="false">False</option>
@@ -32,23 +32,31 @@
             </button>
           </div>
         </div>
-        <div *ngIf="dataSettings.settings.length > 0">
-          <div *ngIf="getSetting(data.name) !== undefined" class="form-inline">
-            <app-select2 [data]="data" [propertyName]="'name'" [options]="dataSettings.getSettingsNames(true)"></app-select2>
+        <div *ngIf="dataSettings.settings.length > 0" class="container">
+          
+          <div *ngIf="dataHasSettingAndFields(data.name) === false" class="form-inline">
+            <app-select2 [data]="data" [propertyName]="'name'" [options]="dataSettings.getSettingsNames(true)" (change)="changeDataName(data, $event)"></app-select2>
             <div *ngIf="getSetting(data.name) !== null && getSetting(data.name) !== undefined">
-                <input type="number" [(ngModel)]="data.value" *ngIf="getSetting(data.name).type === 'number'" class="form-control">
-                <select [value]="data.value.toString()" *ngIf="getSetting(data.name).type === 'boolean'" (change)="changeBool($event.target.value, data)"
+                <input type="number" [(ngModel)]="data.values['value']" *ngIf="getSetting(data.name).type === 'number'" class="form-control">
+                <select [value]="data.values['value'].toString()" *ngIf="getSetting(data.name).type === 'boolean'" (change)="changeBool($event.target.value, data)"
                   class="form-control">
                   <option value="true">True</option>
                   <option value="false">False</option>
                 </select>
-                <span *ngIf="getSetting(data.name).type === 'string'" class="margin"></span>
-                <app-select2 [data]="data" [propertyName]="'value'" [options]="getSetting(data.name).getOptionsArray()" *ngIf="getSetting(data.name).type === 'string'"></app-select2>
+                <span *ngIf="getSetting(data.name).type !== 'number' && getSetting(data.name).type !=='boolean'" class="margin"></span>
+                <app-select2 [data]="data.values" [propertyName]="'value'" [options]="getSetting(data.name).getOptionsArray()" (change)="log(data)" *ngIf="getSetting(data.name).type !== 'number' && getSetting(data.name).type !=='boolean'"></app-select2>
             </div>
             <button class="btn btn-danger float-right" (click)="deleteData(data)">
               <i class="fa fa-trash"></i>
             </button>
           </div>
+
+          <div *ngIf="dataHasSettingAndFields(data.name) === true">
+              <app-select2 [data]="data" [propertyName]="'name'" [options]="dataSettings.getSettingsNames(true)" (change)="changeDataName(data, $event)"></app-select2>
+              <app-data-w-fields [nodeData]="data"></app-data-w-fields>
+          </div>
+          
+
           <div *ngIf="getSetting(data.name) === undefined" class="form-inline">
               <app-select2 [data]="data" [propertyName]="'name'" [options]="dataSettings.getSettingsNames(true)" [overrideInitial]="'Custom'"></app-select2>
               <div *ngIf="data.name !== 'None Selected'">
@@ -58,9 +66,9 @@
                     <option value="string">string</option>
                     <option value="number">number</option>
                   </select>
-                  <input type="text" *ngIf="TypeOf(data) === 'string'" [(ngModel)]="data.value" class="form-control">
-                  <input type="number" *ngIf="TypeOf(data) === 'number'" [(ngModel)]="data.value" class="form-control">
-                  <select [value]="data.value.toString()" *ngIf="TypeOf(data) === 'boolean'" (change)="changeBool($event.target.value, data)"
+                  <input type="text" *ngIf="TypeOf(data) === 'string'" [(ngModel)]="data.values['value']" class="form-control">
+                  <input type="number" *ngIf="TypeOf(data) === 'number'" [(ngModel)]="data.values['value']" class="form-control">
+                  <select [value]="data.values['value'].toString()" *ngIf="TypeOf(data) === 'boolean'" (change)="changeBool($event.target.value, data)"
                     class="form-control">
                     <option value="true">True</option>
                     <option value="false">False</option>
